# cmake-talk

./: index.html
examples/hello-world/: CMakeLists.txt
